# rm_digtialimg_proc_deep

./: CMakeLists.txt  InferenceConfig.h  package.xml  process_plugin.xml
cfg/: Armor.cfg  Draw.cfg  Inference.cfg  Preprocess.cfg
config/: armor_coefficient.yaml  inference.yaml  make_dataset.yaml  preprocess_coefficient.yaml  weibull_coefficient.yaml
include/: ArmorConfig.h  DrawConfig.h  MakedatasetConfig.h  PreprocessConfig.h  common.h  inference.hpp  number_classifier.hpp  process_plugins.h
include/config/: ArmorConfig.h  DrawConfig.h  MakedatasetConfig.h  PreprocessConfig.h
launch/: video_detector.launch
src/: inference.cpp  number_classifier.cpp  video_detect_test.cpp  video_detect_test_origin.cpp
